--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "eleventy-high-performance-blog",
-  "version": "5.0.2",
+  "name": "mattwilkinson.dev",
+  "version": "0.1.1",
   "license": "MIT",
-  "description": "A starter repository for a blog web site using the Eleventy static site generator.",
+  "description": "Personal blog and website",
   "scripts": {
     "build-ci": "npm run js-build && eleventy && npm run test",
     "build": "npm run clean && npm run build-ci",
@@ -21,12 +21,12 @@
   "pre-commit": [],
   "repository": {
     "type": "git",
-    "url": "git://github.com/11ty/eleventy-base-blog.git"
+    "url": "git://github.com/mattwilkinsonn/mattwilkinson.dev.git"
   },
   "bugs": {
-    "url": "https://github.com/11ty/eleventy-base-blog/issues"
+    "url": "https://github.com/mattwilkinsonn/mattwilkinson.dev/issues"
   },
-  "homepage": "https://github.com/11ty/eleventy-base-blog#readme",
+  "homepage": "https://github.com/mattwilkinsonn/mattwilkinson.dev#readme",
   "devDependencies": {
     "@11ty/eleventy": "^1.0.0",
     "@11ty/eleventy-navigation": "^0.1.3",
